1.11: ?/?/2023
	* Add the ability to configure a log factory using the com.j256.simplelogger.backend system property.
	* Moved critical constants to LoggerConstants.java to make it easier to tweak if you are copying into your project.
	* Renamed LogArgumentCreator.createArg() to be createLogArg() to better mirror behavior.

1.10: 11/15/2022
	* Added fluent-logging pattern where you can build a log message with method chaining.

1.9: 1/8/2022
	* Changed the behavior of messages with {} but no arguments.  The {} will be shown.  Matches other logging backends.
	* Add LogArgumentCreator for not having to use toString() to expand an argument.

1.8: 12/31/2021
	* Changed the backend class discovery to be relative to LocalLogBackend.  Makes copying to other projects easier.
	* Updated optional log4j2 dependency to 2.17.1 and updated other optional dependency versions.
	* Added arguments that handle variable arguments with Args method name suffixes.

1.7: 12/20/2021
	* Bumped the version of the _optional_ dependency on log4j2 to version 2.17.0.

1.6: 6/22/2021
	* Fixed bug in the AndroidLogBackend around the logger class name.

1.5: 2/20/2021
	* Made all of the log backend dependencies optional instead of provided.
	* Delay any warnings messages about unknown classes until the backend type is actually used.

1.4: 2/20/2021
	* Added console and AWS Lambda logging backends.

1.3: 1/1/2021
	* Moved the LogBackend implementations that write to the 3rd party loggers to a subpackage.

1.2: 1/1/2021
	* Add logback direct handling using logback-classic.
	* Refactored some of the handling to reduce reflection overhead.
	* Moved some inner classes up to be full classes.

1.1: 12/16/2020
	* Brought the code over from ORMLite into it's own repo.
	* Did some wholesale renaming of stuff to rename the confusing Log to LogBackend.
	* Added a 4th argument to the logger methods.