@@ -2,6 +2,7 @@
 	* Add the ability to configure a log factory using the com.j256.simplelogger.backend system property.
 	* Moved critical constants to LoggerConstants.java to make it easier to tweak if you are copying into your project.
 	* Renamed LogArgumentCreator.createArg() to be createLogArg() to better mirror behavior.
+	* Added FluentLogger.atTrace(), atDebug(), etc. instead of atLevel(Level.TRACE), atLevel(Level.INFO), etc..
 
 1.10: 11/15/2022
 	* Added fluent-logging pattern where you can build a log message with method chaining.
